--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,6 @@
 {
     "name": "mailchimp/mailchimp",
     "autoload": {
-        "psr-0": { "MailChimp": "src" }
-    },
-    "target-dir": ""
+        "psr-0": { "MailChimp": "src/" }
+    }
 }
